# ebook_utils

./: .gitignore  4064066459796.epub  MANIFEST.in  README.md  index.py  install.sh  models.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.epub
ebook_utils/: utils.py
ebook_utils/tests/: tests.py
ebook_utils/tests/data/: Bookwire OS Products-20231018153431-fragment.csv
src/ebook_utils/: book.py  books_loader.py  example.py  example_export.py  test.py  test_export.py  utils.py
src/ebook_utils/assets/templates/: chapter_example.xhtml  container_example.xml  content_example.opf  presentation_epub_example.css  presentation_epub_example.xhtml  toc_epub_example.xhtml  toc_example.ncx
src/ebook_utils/parse_epub/: extract.py  test.py  utils.py
src/ebook_utils/templates/: __init__.py  chapter.py  container_xml.py  content.py  frontpage.py  frontpage_styles.py  ncx.py  nested_toc.py  toc.py
src/ebook_utils/tests/data/: new_e-artnow.txt_2024.01.05_1201.xlsx
